# ChangeLog for x11-drivers/xf86-video-openchrome
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-openchrome/ChangeLog,v 1.9 2008/09/15 15:18:26 jer Exp $

  15 Sep 2008; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Remove x11 as herd. Add myself as maintainer (bug #235435).

*xf86-video-openchrome-0.2.903 (03 Sep 2008)

  03 Sep 2008; Jeroen Roovers <jer@gentoo.org>
  +xf86-video-openchrome-0.2.903.ebuild:
  Version bump thanks to alpiturchi (bug #235435).

  22 Jun 2008; Thomas Anderson <gentoofan23@gentoo.org>
  xf86-video-openchrome-0.2.902.ebuild:
  amd64 stable, bug #227003

  18 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
  xf86-video-openchrome-0.2.902.ebuild:
  stable x86, bug 227003

*xf86-video-openchrome-0.2.902 (10 Apr 2008)

  10 Apr 2008; Steve Dibb <beandog@gentoo.org>
  +xf86-video-openchrome-0.2.902.ebuild:
  Version bump

  10 Apr 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  xf86-video-openchrome-0.2.901.ebuild:
  Stabilize on amd64/x86 for 2008.0.

  15 Mar 2008; Steve Dibb <beandog@gentoo.org>
  xf86-video-openchrome-0.2.901.ebuild:
  Fix use flags, add ~x86 (tsunam)

*xf86-video-openchrome-0.2.901 (15 Mar 2008)

  15 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>; +metadata.xml,
  +xf86-video-openchrome-0.2.901.ebuild:
  (#147425) Add openchrome driver, which supports newer Via cards. Ebuild
  originally by Steve Dibb with modifications by me.