@@ -1,6 +1,12 @@
 # ChangeLog for x11-drivers/xf86-video-openchrome
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-openchrome/ChangeLog,v 1.9 2008/09/15 15:18:26 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-openchrome/ChangeLog,v 1.10 2008/09/16 19:05:35 jer Exp $
+
+*xf86-video-openchrome-9999 (16 Sep 2008)
+
+  16 Sep 2008; Jeroen Roovers <jer@gentoo.org>
+  +xf86-video-openchrome-9999.ebuild:
+  Add live ebuild.
 
   15 Sep 2008; Jeroen Roovers <jer@gentoo.org> metadata.xml:
   Remove x11 as herd. Add myself as maintainer (bug #235435).
